--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="home-content">
             <h3>Hello,It's Me</h3>
             <h1>Ibrahim Elmahy</h1>
-            <h3>And I'm a  <span class="multiple-text"> Web Developer</span></h3>
+            <h3>And I'm a  <span class="multiple-text"></span></h3>
             <p>In the world of software development, every line of code is an opportunity to solve a problem, enhance an experience, or bring an idea to life.</p>
             <div class="social-media">
                 <a href="https://web.facebook.com/profile.php?id=100072599235114"><i class='bx bxl-facebook' ></i></a>
