--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <a href="#about" class="btn">more about me</a>
         </div>
         <div class="home-img">
-            <img src="Untitled-1.png" alt="">
+            <img src="second (2).svg" alt="">
         </div>
     </section>
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="Untitled-2.png" alt="">
+            <img src="first.svg" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">
@@ -57,7 +57,7 @@
             </h2>
             <h3>Full Stack .NET Developer</h3>
             <p>Welcome to my portfolio, where innovation meets functionality! As a dedicated Full Stack .NET Developer, I specialize in creating robust, scalable, and user-friendly applications that deliver exceptional value. With expertise spanning both front-end and back-end development, I bring ideas to life by blending cutting-edge technology with creative problem-solving.</p>
-            <a href="https://t.me/alaamarzook" class="btn">more inforamtion</a>
+            <a href="https://www.linkedin.com/in/ibrahim-elmahy-12b968265/" class="btn">more inforamtion</a>
         </div>
 
     </section>
